--- a/SegmentingandClusteringTorontoNeighborhoods.ipynb
+++ b/SegmentingandClusteringTorontoNeighborhoods.ipynb
@@ -899,9 +899,12 @@
    "outputs": [],
    "source": [
     "#Using FourSquare API\n",
-    "CLIENT_ID = 'I5BNVOQGS2VPHWYQCIVWRS4NVW1E3FHMUPRYNL5BT5EX1ZJ1' #  Foursquare ID\n",
-    "CLIENT_SECRET = 'KFMEF1Q51W4VD0EJUY5DP0KLQA5EXRQ1BWEVOZQZYOISDVHE' #  Foursquare Secret\n",
-    "VERSION = '20180604' # Foursquare API version\n",
+    "filename = 'my_credentials.json'
+     with open(filename) as c:
+         data = json.load(c)
+    "CLIENT_ID = data['credentials']['CLIENT_ID'] #  Foursquare ID\n",
+    "CLIENT_SECRET = data['credentials']['CLIENT_SECRET'] #  Foursquare Secret\n",
+    "VERSION = data['credentials']['VERSION'] # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value"
    ]
   },
